# lora-qwen

./: .gitignore  EXPERIMENTS.md  README.md  pyproject.toml
analysis/: ft_gains_analysis.md  ft_gains_categories_all.json  ft_gains_categories_qwen25_1.5b.json  ft_gains_categories_qwen2_1.5b.json  ft_gains_categories_qwen3_1.7b.json  headroom_summary.md
configs/: E0a_base.yaml  E0b_full_ft.yaml  E1a_q_proj.yaml  E1b_v_proj.yaml  E1b_v_proj_rebalanced.yaml  E1c_qv_proj.yaml  E1e_all_linear.yaml  E2_r1.yaml  E2_r16.yaml  E2_r1_attention.yaml  E2_r32_attention.yaml  E2_r4.yaml  E2_r64_attention.yaml  E2_r8_attention.yaml  E8m_q_proj.yaml  E8m_qv_proj.yaml  E8m_v_proj.yaml  all_linear.yaml  all_linear_custom.yaml  attention_only.yaml  base.yaml
configs/E15b_qwen2/: all_linear.yaml  attention.yaml  q.yaml  qv.yaml  v.yaml
configs/E15b_qwen25/: all_linear.yaml  attention.yaml  (+3 more)
results/: E1a_gsm8k.json  E1b_gsm8k.json  E1c_qv_proj_rebalanced.json  gsm8k_base_vs_ft.json
scripts/: E3_ANALYSIS_GUIDE.md  aggregate_results.py  analyze_subspace.py  bench_latency.py  categorize_diffs.py  diag_dev_leakage.py  diag_dev_test_gap.py  eval_base_truncation.py  eval_gsm8k.py  export_checkpoints.sh  extract_diffs.py  gen_qwen15b_configs.py  plot_diag_steps.py  plot_epoch_curve.py  plot_ft_analysis.py  plot_headroom.py  plot_lr_sweep.py  plot_stage4_instruct.py  reeval_sweeps_test.py  run_ft_analysis.py  run_headroom_pipeline.py  run_reference_point.py  smoke_ft.py  smoke_setup.py  subspace_plots.py  train_full_ft.py  train_lora.py
tests/: test_budget_report.py  test_extract.py
(+250 files in other folders)
