[project]
name = "lora-qwen"
version = "0.1.0"
description = "LoRA reproduction & extension on Qwen3-1.7B-Base (university ML project)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.3",
    "transformers>=4.51",
    "peft>=0.11",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "datasets>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
